rust/macros/tests/ui/fail/duplicate_roles.stderr
error: Choreography parse error:
       Duplicate role declaration 'A'
         --> input:2:19
           |
         2 | {        roles A, A
                               ^

       Macro token input is parsed from original source text.
       Use the canonical indentation-based DSL surface in token form.
 --> tests/ui/fail/duplicate_roles.rs:3:1
  |
3 | / choreography! {
4 | |     protocol Bad =
5 | |       roles A, A
6 | |       A -> A : Ping
7 | | }
  | |_^
  |
  = note: this error originates in the macro `choreography` (in Nightly builds, run with -Z macro-backtrace for more info)
